// Bun Snapshot v1, https://bun.sh/docs/test/snapshots

exports[`invalid credentials rejects a non-numeric project_id 1`] = `
"■  ✖ Invalid input: expected number, received NaN
  → at projectId"
`;

exports[`invalid credentials reports a project that does not exist 1`] = `
"●  Fetching project info
■  Failed to fetch project info. Project Not Found"
`;

exports[`invalid credentials reports an invalid api_token 1`] = `
"●  Fetching project info
■  Couldn't authorize. Check your 'api_token'"
`;

exports[`invalid credentials rejects a base_path that does not exist 1`] = `
"■  Configuration file is invalid. Check the following parameters in your configuration file:
	- The base path /not/exists/path was not found. Check your 'base_path' for possible typos and/or capitalization mismatches"
`;

exports[`invalid credentials rejects an invalid base_url 1`] = `
"■  ✖ base_url must be a Crowdin URL (e.g. https://api.crowdin.com or https://<org>.crowdin.com)
  → at baseUrl"
`;
